feat: book creation function (not added to DOM yet)

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
           <form action="" method="dialog" id="book_form">
             <p>Please introduce the book data:</p>
             <button id="close_dialog">X</button><label for="title">Title</label
-            ><input type="text" id="title" name="title" required/><label
+            ><input type="text" id="title" name="title" required /><label
               for="author"
-            >Author</label
-            ><input type="text" id="author" name="author" required/><label
+              >Author</label
+            ><input type="text" id="author" name="author" required /><label
               for="pages"
-            >Number of pages</label
-            ><input type="number" id="pages" name="pages" required/><div class="read_box">
-                <label
-                  for="read"
-                >Have you read it?</label
-                ><input type="checkbox" id="read" name="read" />
+              >Number of pages</label
+            ><input type="number" id="pages" name="pages" required />
+            <div class="read_box">
+              <label for="read">Have you read it?</label
+              ><input type="checkbox" id="read" name="read" />
             </div>
+            <button id="form_submit">Save</button>
           </form>
         </dialog>
         <button id="add_new_book">+</button>
