feat: added remove book button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </nav>
       <main class="library">
         <div class="card" id="example_card">
+          <button class="close_button" title="Remove book from library">X</button>
           <h2 class="book_title">Example Title</h2>
           <h3 class="book_author">Author Smith</h3>
           <p class="book_pages">254 pages</p>
