feat: book remove functionality
- Separated book addition and removals
- Separated nav link addition and removals

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="book_list"></ul>
       </nav>
       <main class="library">
-        <div class="card" id="example_card">
+        <div class="card" id="example_card" data-value="Example title">
           <button class="close_button" title="Remove book from library">X</button>
           <h2 class="book_title">Example Title</h2>
           <h3 class="book_author">Author Smith</h3>
