--- a/index.html
+++ b/index.html
@@ -17,12 +17,32 @@
       <main class="library">
         <div class="card" id="example_card" data-value="Example title">
           <button class="close_button" title="Remove book from library">X</button>
+          <button class="edit_button" title="Edit book info"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>book-edit</title><path d="M19.39 10.74L11 19.13V22H6C4.89 22 4 21.11 4 20V4C4 2.9 4.89 2 6 2H7V9L9.5 7.5L12 9V2H18C19.1 2 20 2.89 20 4V10.3C19.78 10.42 19.57 10.56 19.39 10.74M13 19.96V22H15.04L21.17 15.88L19.13 13.83L13 19.96M22.85 13.47L21.53 12.15C21.33 11.95 21 11.95 20.81 12.15L19.83 13.13L21.87 15.17L22.85 14.19C23.05 14 23.05 13.67 22.85 13.47Z" /></svg></button>
           <h2 class="book_title">Example Title</h2>
           <h3 class="book_author">Author Smith</h3>
-          <p class="book_pages">254 pages</p>
-          <button class="read_status">Read</button>
+          <p class="book_pages" data-value="254">254 pages</p>
+          <button class="read_status" data-value="true">Read</button>
         </div>
         <dialog id="book_form_dialog">
+          <form action="" method="dialog" id="book_form">
+            <p>Please introduce the book data:</p>
+            <button id="close_dialog">X</button><label for="title">Title</label
+            ><input type="text" id="title" name="title" required /><label
+              for="author"
+              >Author</label
+            ><input type="text" id="author" name="author" required /><label
+              for="pages"
+              >Number of pages</label
+            ><input type="number" id="pages" name="pages" required />
+            <div class="read_box">
+              <label for="read">Have you read it?</label
+              ><input type="checkbox" id="read" name="read" />
+            </div>
+            <button id="form_submit">Save</button>
+          </form>
+        </dialog>
+        <!-- EDIT IDs FOR NON CONFUSION -->
+        <dialog id="edit_dialog">
           <form action="" method="dialog" id="book_form">
             <p>Please introduce the book data:</p>
             <button id="close_dialog">X</button><label for="title">Title</label
