--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
         </dialog>
         <!-- EDIT IDs FOR NON CONFUSION -->
         <dialog id="edit_dialog">
-          <form action="" method="dialog" id="book_form">
-            <p>Please introduce the book data:</p>
-            <button id="close_dialog">X</button><label for="title">Title</label
-            ><input type="text" id="title" name="title" required /><label
-              for="author"
+          <form action="" method="dialog" id="edit_form">
+            <p>Please introduce the changes:</p>
+            <button id="close_dialog">X</button><label for="edit_title">Title</label
+            ><input type="text" id="edit_title" name="edit_title" required /><label
+              for="edit_author"
               >Author</label
-            ><input type="text" id="author" name="author" required /><label
-              for="pages"
+            ><input type="text" id="edit_author" name="edit_author" required /><label
+              for="edit_pages"
               >Number of pages</label
-            ><input type="number" id="pages" name="pages" required />
+            ><input type="number" id="edit_pages" name="edit_pages" required />
             <div class="read_box">
-              <label for="read">Have you read it?</label
-              ><input type="checkbox" id="read" name="read" />
+              <label for="edit_read">Have you read it?</label
+              ><input type="checkbox" id="edit_read" name="edit_read" />
             </div>
-            <button id="form_submit">Save</button>
+            <button id="edit_submit">Save</button>
           </form>
         </dialog>
       </main>
