feat: read status toggle functionality added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h2 class="book_title">Example Title</h2>
           <h3 class="book_author">Author Smith</h3>
           <p class="book_pages" data-value="254">254 pages</p>
-          <button class="read_status" data-value="true">Read</button>
+          <button class="read_status" data-value="true" title="Toggle read status">Read</button>
         </div>
         <dialog id="book_form_dialog">
           <form action="" method="dialog" id="book_form">
