--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
             <option>Read</option>
             <option>Not read yet</option>
           </select>
+          <div class="sort_list">Sort by:
+            <select name="" id="sort_options">
+              <option value="">Title A - Z</option>
+              <option value="">Title Z - A</option>
+              <option value="">Author A - Z</option>
+              <option value="">Author Z - A</option>
+              <option value=""># of pages (ascendent)</option>
+              <option value=""># of pages (descendent)</option>
+            </select>
+          </div>
         </div>
       </div>
       <div id="photo_credit">
