--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
               <option value=""># of pages (descendent)</option>
             </select>
           </div>
+          <button id="reset_filters">Reset filters</button>
         </div>
       </div>
       <div id="photo_credit">
