feat: read status filter added

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <div class="filter read_filter">Filter by read status:
           <select name="read_or_not" id="read_or_not_filter">
             <option value="default">Choose read status</option>
-            <option>Read</option>
-            <option>Not read yet</option>
+            <option value="true">Read</option>
+            <option value="false">Not read yet</option>
           </select>
           <div class="sort_list">Sort by:
             <select name="" id="sort_options">
