--- a/index.html
+++ b/index.html
@@ -80,18 +80,19 @@
             <option value="true">Read</option>
             <option value="false">Not read yet</option>
           </select>
+        </div>
           <div class="sort_list">Sort by:
             <select name="" id="sort_options">
-              <option value="">Title A - Z</option>
-              <option value="">Title Z - A</option>
-              <option value="">Author A - Z</option>
-              <option value="">Author Z - A</option>
-              <option value=""># of pages (ascendent)</option>
-              <option value=""># of pages (descendent)</option>
+              <option value="default"></option>
+              <option value="title ascending">Title A - Z</option>
+              <option value="title descending">Title Z - A</option>
+              <option value="author ascending">Author A - Z</option>
+              <option value="author descending">Author Z - A</option>
+              <option value="pages ascending"># of pages (ascendent)</option>
+              <option value="pages descending"># of pages (descendent)</option>
             </select>
           </div>
           <button id="reset_filters">Reset filters</button>
-        </div>
       </div>
       <div id="photo_credit">
         Foto de
