feat: card sorting added

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
               <option value="title descending">Title Z - A</option>
               <option value="author ascending">Author A - Z</option>
               <option value="author descending">Author Z - A</option>
-              <option value="pages ascending"># of pages (ascendent)</option>
-              <option value="pages descending"># of pages (descendent)</option>
+              <option value="pages ascending"># of pages (ascending)</option>
+              <option value="pages descending"># of pages (descending)</option>
             </select>
           </div>
           <button id="reset_filters">Reset filters</button>
